crates/lang/tests/ui/contract/fail/config-compile-as-dependency-missing-arg.rs
use ink_lang as ink;

#[ink::contract(compile_as_dependency)]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message)]
        pub fn message(&self) {}
    }
}

fn main() {}
